tests/paczka1/fuzzy1/60490543.err
Error in line 1: B2ca A384 78,5
Error in line 2: GAtkMWid S646 12,0
Error in line 12: 9FrJ A615 79,9
Error in line 31: S646 S646 95,3
Error in line 32: S646 A384 48,9
